--- a/src/Presentation/LeagueManager.WebApi/appsettings.json
+++ b/src/Presentation/LeagueManager.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LeagueDatabase": {
+    "ConnectionString": "Host=leaguemanager.league.database;Port=5432;Database=league;Username=testuser;Password=testpass;"
+  }
 }
