Statistics module init. ELS repository basic configuration added.

--- a/src/Presentation/LeagueManager.WebApi/appsettings.json
+++ b/src/Presentation/LeagueManager.WebApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "LeagueDatabase": {
     "ConnectionString": "Host=leaguemanager.league.database;Port=5432;Database=league;Username=testuser;Password=testpass;"
+  },
+  "StatisticsDatabase": {
+    "Nodes": [
+      "https://localhost:9200"
+    ]
   }
 }
