--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ./.containers/season-db:/var/lib/posgresql/data
     ports:
      - 5432:5432
-  leaguemanager.archive.database:
+  leaguemanager.statistics.database:
     image: elasticsearch:8.13.4
     ports:
      - 9200:9200
