--- a/src/Modules/Statistics/LeagueManager.Statistics.Infrastructure/LeagueManager.Statistics.Infrastructure.csproj
+++ b/src/Modules/Statistics/LeagueManager.Statistics.Infrastructure/LeagueManager.Statistics.Infrastructure.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\src\Shared\LeagueManager.Shared.Infrastructure\LeagueManager.Shared.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\..\Shared\LeagueManager.Shared.Infrastructure\LeagueManager.Shared.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
